# $Id: CHANGELOG,v 1.12 2003/10/01 05:58:47 jaco Exp $

* Wed, Oct 01, 2003, 0.5.6-cvs
  + Buchan Milne <bgmile@cae.co.za>:
    [mklivecd]:
      - Fix rootdir to use the kernel/modules from the chroot
      - Add basic bootsplash support if bootsplash is installed
        on the image'd system (normal as well as chroot)
      - Avoid premature shell expansion polluting the exclude list
    [mklivecd.spec]:
      - Updated to allow for rpmbuild -ta <tarball> to work for
        a CVS snapshot generated via 'make dist'
  + Jaco Greeff <jaco@linuxminicd.org>:
    [FAQ]:
      - Updated FAQ to include some compression parameter
        statistics (describes mklivecd '--blocksize' and
        '--looptype' options)
    [Makefile]:
      - Combined piped sed commands into one
      - Removed non-existing busybox and cloop version
        replacements for specfile generation (legacy)
      - Distribute generated specfile by default in 'dist',
        instead of the previously included '.in' (This allows
        a build via the "rpmbuild -t[abs] mklivecd-<ver>.tar.bz2"
        command)
      - Ability to build CVS dist per date
      - Add RPM release information for spec file generation
    [README]:
      - Include CVS location
    [linuxrc]:
      - Only make symlinks to /var/lib/{rpm,urpmi} directories, the
        rest are actual writables
      - Complete rework of creation of /var directories
    [mklivecd]:
      - Changed default blocksize back to 64K (sane default for
        fastest operation in decompressing the compressed image)
      - Added '--blocksize' option, accepting sizes in K, eg.
        '--blocksize 224' to use a 224K size for the compressed
        blocks.
      - Added '--lowmem' option, writing created iso to disk
        before compression. (Huge saving on memory comsumption
        for low memory systems, expensive on disk space)
      - Case statement now has one combined entry for '-h', '-?'
        and '--help' command-line options