@@ -1,7 +1,7 @@
-# $Id: CHANGELOG,v 1.12 2003/10/01 05:58:47 jaco Exp $
+# $Id: CHANGELOG,v 1.13 2003/10/01 06:28:47 jaco Exp $
 
 * Wed, Oct 01, 2003, 0.5.6-cvs
-  + Buchan Milne <bgmile@cae.co.za>:
+  + Buchan Milne <bgmilne@cae.co.za>:
     [mklivecd]:
       - Fix rootdir to use the kernel/modules from the chroot
       - Add basic bootsplash support if bootsplash is installed
@@ -27,6 +27,9 @@
       - Add RPM release information for spec file generation
     [README]:
       - Include CVS location
+    [hwdetect]:
+      - Added support for USB devices, probing USB controllers to
+        enable detection of attached devices
     [linuxrc]:
       - Only make symlinks to /var/lib/{rpm,urpmi} directories, the
         rest are actual writables
